--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "wiaam hilal",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.8",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
