--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.3.1",
+    "google-translate-api-x": "^10.7.2",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "joi": "^17.13.0",
